# geo-snap-mapper

./: API-Endpoints.md  LEAFLET_INTEGRATION.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
backend/: config.py  exif_utils.py  main.py  openai_vision.py  requirements.txt
public/: leaflet-demo.html
src/: index.css
src/components/: ExifInfo.tsx  ImageProcessor.tsx  ImageUpload.tsx  LocationMap.tsx  LocationMapMapbox.tsx  LocationOptions.tsx
src/pages/: Index.tsx
